[package]
name = "bladerf-power-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bladerf-power"
path = "src/main.rs"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ctrlc = { version = "3.4", features = ["termination"] }
clap = { version = "4.5", features = ["derive", "env", "color"] }
exitcode = "1"
rustfft = "6.2"

[dependencies.libbladerf-sys]
git = "https://github.com/jonlamb-gh/libbladeRF-sys"
branch = "main"
